--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "start": "node index.js & webpack --watch -d",
     "build": "webpack -p",
-    "test": "standard",
+    "test": "standard && mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
+    "test:watch": "npm run test -- --watch",
     "postinstall": "npm run build"
   },
   "dependencies": {
@@ -13,9 +14,18 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "express": "^4.14.0",
+    "immutable": "^3.8.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "standard": "^8.4.0",
     "webpack": "^1.13.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-immutable": "^1.6.0",
+    "mocha": "^3.1.2"
+  },
+  "babel": {
+    "presets": ["es2015", "react"]
   }
 }
